# Socratic-learning

./: .coverage  .editorconfig  .gitattributes  ARCHITECTURE.md  LICENSE  PHASE_1_COMPLETION.md  PHASE_2_COMPLETION.md  PHASE_3_COMPLETION.md  PHASE_4_COMPLETION.md  PRODUCTION.md  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test-and-build.yml  test.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  FAQ_BY_SCENARIO.md  GUIDES_BY_ROLE.md  INTEGRATION_GUIDE.md  MATURITY_CALCULATION_SYSTEM.md  TROUBLESHOOTING.md
examples/: 01_basic_tracking.py  02_pattern_detection.py  03_recommendations.py  04_finetuning_export.py
src/socratic_learning/: __init__.py  async_learning.py  exceptions.py  learning.py  learning_agent.py  learning_engine.py  ml_recommender.py  models.py  service.py  user_learning_agent.py  utils.py
src/socratic_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/socratic_learning/analytics/: __init__.py  aggregator.py  analytics_calculator.py  cohort_analyzer.py  learning_engine.py  maturity_calculator.py  metrics_collector.py  pattern_detector.py  reporter.py
src/socratic_learning/core/: __init__.py  interaction.py  metric.py  pattern.py  recommendation.py
src/socratic_learning/feedback/: __init__.py  analyzer.py  collector.py
src/socratic_learning/integrations/: __init__.py
src/socratic_learning/integrations/langchain/: __init__.py  tool.py
src/socratic_learning/integrations/openclaw/: __init__.py  skill.py
src/socratic_learning/predictions/: __init__.py  predictor.py
src/socratic_learning/recommendations/: __init__.py  engine.py  export.py  rules.py
src/socratic_learning/storage/: __init__.py  base.py  sqlite_store.py
src/socratic_learning/tracking/: __init__.py  logger.py  session.py
tests/: __init__.py  test_module_imports.py
tests/unit/: __init__.py  test_analytics.py  test_feedback.py  test_models.py  test_recommendations.py  test_reporting.py  test_sqlite_store.py  test_tracking.py
